--- a/B737-800X/actions.yaml
+++ b/B737-800X/actions.yaml
@@ -120,3 +120,19 @@ actions:
     type: dir
     icon: dir
     label: MCP & CTR
+  - index: 26
+    name: flaps
+    type: single
+    dataref: sim/flightmodel/misc/blown_flap_engage_rat
+    dataref-multiplier: 100
+    gauge:
+      needle-center:
+        x: 64
+        y: 64
+      background: flapsbckg
+      needle: flapsneedle
+      range-degrees: 270
+      min: 0.0
+      max: 100
+      step: 1
+
