--- a/B737-800X/actions.yaml
+++ b/B737-800X/actions.yaml
@@ -115,25 +115,23 @@ actions:
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
     # f/o six pack end
-  - index: 8
-    name: mcpctr
+  - index: 26
+    name: second
     type: dir
     icon: dir
-    label: MCP & CTR
-  - index: 26
-    name: flaps
-    type: dir
-    dataref: sim/flightmodel/misc/blown_flap_engage_rat
-    dataref-multiplier: 100
-    gauge:
-      name: flaps
-      needle-center:
-        x: 64
-        y: 64
-      background: flapsbckg
-      needle: flapsneedle
-      range-degrees: 270
-      min: 0.0
-      max: 100
-      step: 1
+    label: SECOND DECK
+  - index: 27
+    name: six pack
+    type: single
+    icon: orange-up
+    label: SIX PACK
+    command: FlyWithLua/streamdeck_handler/capt_six_pack_start
+    command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
+  - index: 28
+    name: six pack
+    type: single
+    icon: orange-up
+    label: SIX PACK
+    command: FlyWithLua/streamdeck_handler/capt_six_pack_start
+    command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
 
