--- a/B737-800X/actions.yaml
+++ b/B737-800X/actions.yaml
@@ -16,24 +16,26 @@ actions:
     command: FlyWithLua/streamdeck_handler/capt_master_caution_start
     command-release: FlyWithLua/streamdeck_handler/capt_master_caution_end
   - index: 2
-    name: below gs p-inhibit
+    name: ap light
     type: single
-    icon: belowgs
-    dataref: laminar/B738/annunciator/below_gs
-    dataref-multiplier: 1.5
-    command: laminar/B738/alert/below_gs_pilot
+    icon: apprst
+    dataref: laminar/B738/annunciator/ap_disconnect1
+    command: FlyWithLua/streamdeck_handler/ap_prst_start
+    command-release: FlyWithLua/streamdeck_handler/ap_prst_end
   - index: 3
-    name: takeoff config
+    name: at light
     type: single
-    icon: takeoffconfig
-    dataref: laminar/B738/annunciator/takeoff_config
-    dataref-multiplier: 1.5
+    icon: atprst
+    dataref: laminar/B738/annunciator/at_disconnect1
+    command: FlyWithLua/streamdeck_handler/at_prst_start
+    command-release: FlyWithLua/streamdeck_handler/at_prst_end
   - index: 4
-    name: cabin altitude
+    name: fmc light
     type: single
-    icon: cabinaltitude
-    dataref: laminar/B738/annunciator/cabin_alt
-    dataref-multiplier: 1.5
+    icon: fmcprst
+    dataref: laminar/B738/annunciator/at_fms_disconnect1
+    command: FlyWithLua/streamdeck_handler/fmc_prst_start
+    command-release: FlyWithLua/streamdeck_handler/fmc_prst_end
   - index: 5
     name: speedbrake armed
     type: single
