--- a/B737-800X/press.yaml
+++ b/B737-800X/press.yaml
@@ -15,7 +15,7 @@ actions:
       - 2.0
     command-on: laminar/B738/toggle_switch/air_valve_ctrl_right
     command-off: laminar/B738/toggle_switch/air_valve_ctrl_left
-  - index: 18
+  - index: 11
     name: airvalveman
     type: dir
     icon: blueb
@@ -28,6 +28,24 @@ actions:
     command: FlyWithLua/streamdeck_handler/land_alt_down_start
     command-release: FlyWithLua/streamdeck_handler/land_alt_down_end
   - index: 17
+    name: land alt display
+    type: none
+    dataref: laminar/B738/pressurization/knobs/landing_alt
+    display:
+      name: -1000.50000.nonpoint.press
+      text-center:
+        x: center
+        y: 58 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 24
+      zero-pad: False
+      min: -1000
+      max: 50000
+      step: 50
+      color: orange
+      keep-decimal: False
+      background: none
+  - index: 18
     name: land alt up
     type: single
     icon: blue-right
@@ -42,6 +60,24 @@ actions:
     command: FlyWithLua/streamdeck_handler/flt_alt_down_start
     command-release: FlyWithLua/streamdeck_handler/flt_alt_down_end
   - index: 9
+    name: flt alt display
+    type: none
+    dataref: sim/cockpit2/pressurization/actuators/max_allowable_altitude_ft
+    display:
+      name: -1000.50000.nonpoint.press
+      text-center:
+        x: center
+        y: 58 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 24
+      zero-pad: False
+      min: -1000
+      max: 50000
+      step: 50
+      color: orange
+      keep-decimal: False
+      background: none
+  - index: 10
     name: flt alt up
     type: single
     icon: blue-right
