--- a/B737-800X/elec.yaml
+++ b/B737-800X/elec.yaml
@@ -4,7 +4,7 @@ actions:
     type: dir
     icon: dir
     label: MAIN DECK
-  - index: 25
+  - index: 29
     name: bat cover
     type: single
     file-names:
@@ -13,7 +13,7 @@ actions:
     dataref: laminar/B738/button_switch/cover_position[2]
     command: laminar/B738/button_switch_cover02
     label: BAT COVER
-  - index: 26
+  - index: 30
     name: cab util
     type: single
     file-names:
@@ -22,7 +22,7 @@ actions:
     dataref: laminar/B738/toggle_switch/cab_util_pos
     command: laminar/B738/autopilot/cab_util_toggle
     label: CAB UTIL
-  - index: 27
+  - index: 31
     name: ife pass
     type: single
     file-names:
@@ -31,7 +31,7 @@ actions:
     dataref: laminar/B738/toggle_switch/ife_pass_seat_pos
     command: laminar/B738/autopilot/ife_pass_seat_toggle
     label: IFE PASS
-  - index: 9
+  - index: 25
     name: dc power knob
     type: dual
     file-names:
@@ -54,7 +54,7 @@ actions:
     command-on: laminar/B738/knob/dc_power_up
     command-off: laminar/B738/knob/dc_power_dn
     label: DC POWER
-  - index: 10
+  - index: 27
     name: ac power knob
     type: dual
     icon: blue-button
@@ -96,8 +96,101 @@ actions:
     icon: elec
     dataref: laminar/B738/annunciator/elec
     dataref-multiplier: 1.5
-  - index: 11
+  - index: 20
     name: maint
     type: none
     icon: white-button
     label: MAINT
+    # displays
+    # dc
+  - index: 9
+    name: dc amps display
+    type: none
+    dataref: laminar/B738/dc_amp_value
+    display:
+      name: -100.500.elec
+      text-center:
+        x: center
+        y: 60 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 32
+      zero-pad: False
+      min: -100
+      max: 500
+      step: 1
+      color: lime
+      keep-decimal: False
+      background: none
+  - index: 17
+    name: dc volts display
+    type: none
+    dataref: laminar/B738/dc_volt_value
+    display:
+      name: -100.500.elec
+      text-center:
+        x: center
+        y: 60 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 32
+      zero-pad: False
+      min: -100
+      max: 500
+      step: 1
+      color: lime
+      keep-decimal: False
+      background: none
+  # ac
+  - index: 18
+    name: ac amps display
+    type: none
+    dataref: laminar/B738/ac_amp_value
+    display:
+      name: -100.500.elec
+      text-center:
+        x: center
+        y: 60 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 32
+      zero-pad: False
+      min: -100
+      max: 500
+      step: 1
+      color: lime
+      keep-decimal: False
+      background: none
+  - index: 19
+    name: ac volts display
+    type: none
+    dataref: laminar/B738/ac_volt_value
+    display:
+      name: -100.500.elec
+      text-center:
+        x: center
+        y: 60 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 32
+      zero-pad: False
+      min: -100
+      max: 500
+      step: 1
+      color: lime
+      keep-decimal: False
+      background: none
+  - index: 11
+    name: ac freq display
+    type: none
+    dataref: laminar/B738/ac_freq_value
+    display:
+      name: -100.500.elec
+      text-center:
+        x: center
+        y: 60 # center doesn't work as it should, due to font's height
+      font-path: consola.ttf
+      font-size: 32
+      zero-pad: False
+      min: -100
+      max: 500
+      step: 1
+      color: lime
+      keep-decimal: False
+      background: none
