--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,9 @@ xp-port: 49000
 server-ip: 127.0.0.1
 server-port: 49008
 default-font: ms33558.ttf
+# comment out following line to disable image caching
+# the images will have to load for several seconds every time, but it is suitable for tweaking
+cache-path: ./img-cache.pkl
 stream-decks:
   - serial: CL41I1A00651
     keys: 32
