--- a/B737-800X/efis.yaml
+++ b/B737-800X/efis.yaml
@@ -53,6 +53,16 @@ actions:
     icon: blue-left
     label: RADIO
     command: laminar/B738/EFIS_control/cpt/minimums_up
+#    special-label:
+#      label: RADIO
+#      text-center:
+#        x: center
+#        y: 60 # center doesn't work as it should, due to font's height
+#      font-path: consola.ttf
+#      font-size: 32
+#      background: none
+#      direction: ltr
+#      align: center
   - index: 1
     name: mins
     type: single
