--- a/config.yaml
+++ b/config.yaml
@@ -3,10 +3,13 @@ xp-ip: 127.0.0.1
 xp-port: 49000
 server-ip: 127.0.0.1
 server-port: 49008
-default-font: ms33558.ttf
+default-font: IBMPlexMono-Bold.ttf
+default-font-size: 13
 # comment out following line to disable image caching
 # the images will have to load for several seconds every time, but it is suitable for tweaking
 cache-path: ./img-cache.pkl
+brightness: 75
+# the first one is taken as active for the session
 stream-decks:
   - serial: CL41I1A00651
     keys: 32
